# automataTPO1

./: .gitignore  CMakeLists.txt  automata.dot
TP/: Main.cpp
TP/DFA/: AutomataInterface.cpp  DeterministicFiniteAutomata.cpp  NotDeterministicFiniteAutomata.cpp
TP/automata/: AutomataInterface.h
TP/automata/convertion/: ConvertionOfAutomatas.cpp  ConvertionOfAutomatas.h
TP/automata/dfa/: DeterministicFiniteAutomata.cpp  DeterministicFiniteAutomata.h
TP/automata/ndfa/: NotDeterministicFiniteAutomata.cpp  NotDeterministicFiniteAutomata.h
TP/automata/operaciones_TP2/: operacionesTP2.cpp  operacionesTP2.h
TP/auxiliarmethods/: AutomataOperations.cpp  AutomataOperations.h  CollectionsOperators.cpp  CollectionsOperators.h
TP/ejemplos_documentados/: automata1.dot  automata2.dot  ex1_file_creation.cpp  ex1_file_read_and_string_validation.cpp  ex1_readme.txt  ex2_file_creation.cpp  ex2_file_read_and_string_validation.cpp  ex2_readme.txt
TP/parser/: Parser.cpp  Parser.h
TP/parser/automata-to-string/dfa/: DFAToString.cpp  DFAToString.h
TP/parser/automata-to-string/ndfa/: NDFAToString.cpp  NDFAToString.h
TP/testing/: TestRename.cpp  TestRename.h  TestUnion.cpp  fileToNdfa.cpp  input.txt  ndfaToFile.cpp  output.txt  testClausuraLambda.cpp  testMover.cpp  testParserFunctions.cpp
automata_files/: automata_1.txt
